deployments/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-data-access-api-deployment
  labels:
    app: laa-data-access-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laa-data-access-api-pod
  template:
    metadata:
      labels:
        app: laa-data-access-api-pod
    spec:
      containers:
        - name: laa-data-access-api-container
          image: ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
